--- a/drchrono/application/apps/patients/templates/patients/patients.html
+++ b/drchrono/application/apps/patients/templates/patients/patients.html
@@ -1,1 +1,132 @@
-patients list
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+<br/>
+<div class="jumbotron text-center">
+    <h1>Patients list</h1>
+    <h3>latest sync at: {{ latest_sync_at }}</h3>
+    {% if status_message %}
+    <div class="alert alert-warning" role="alert">
+        {{ status_message }}
+    </div>
+    {% endif %}
+</div>
+
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        {% if patients.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ patients.previous_page_number }}&page_size={{ page_size }}" tabindex="-1">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Previous</a>
+        </li>
+        {% endif %}
+
+        {% if patients.number|add:'-4' > 1 %}
+            <li class="page-item">
+                <a class="page-link" href="#">&hellip;</a>
+            </li>
+        {% endif %}
+
+        {% for i in patients.paginator.page_range %}
+            {% if patients.number == i %}
+                <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+            {% elif i > patients.number|add:'-5' and i < patients.number|add:'5' %}
+                <li class="page-item"><a class="page-link" href="?page={{ i }}&page_size={{ page_size }}">{{ i }}</a></li>
+            {% endif %}
+        {% endfor %}
+
+        {% if patients.paginator.num_pages > patients.number|add:'4' %}
+            <li class="page-item">
+                <a class="page-link" href="#">&hellip;</a>
+            </li>
+        {% endif %}
+        
+        {% if patients.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ patients.next_page_number }}&page_size={{ page_size }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+
+<table class="table">
+<thead class="thead-light">
+    <tr>
+    <th scope="col">#</th>
+    <th scope="col">Photo</th>
+    <th scope="col">First Name</th>
+    <th scope="col">Last Name</th>
+    <th scope="col">Date of birth</th>
+    <th scope="col">Phone Number</th>
+    </tr>
+</thead>
+<tbody>
+    {% for patient in patients %}
+        <tr>
+            <th scope="row">{{ patient.id }}</th>
+            <th style="width: 20%">
+                {% if patient.photo %}
+                <img src="{{ patient.photo }}" class="img-thumbnail" style="width:40%; height: 40%">
+                {% else %}
+                <img src="http://placehold.it/200x300" class="img-thumbnail" style="width:40%; height: 40%">
+                {% endif %}
+            </th>
+            <td>{{ patient.first_name }}</td>
+            <td>{{ patient.last_name }}</td>
+            <td>{{ patient.birth_date|default_if_none:"" }}</td>
+            <td>{{ patient.phone_number }}</td>
+        </tr>
+    {% endfor %}
+</tbody>
+</table>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        {% if patients.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ patients.previous_page_number }}&page_size={{ page_size }}" tabindex="-1">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Previous</a>
+        </li>
+        {% endif %}
+
+        {% if patients.number|add:'-4' > 1 %}
+            <li class="page-item">
+                <a class="page-link" href="#">&hellip;</a>
+            </li>
+        {% endif %}
+
+        {% for i in patients.paginator.page_range %}
+            {% if patients.number == i %}
+                <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+            {% elif i > patients.number|add:'-5' and i < patients.number|add:'5' %}
+                <li class="page-item"><a class="page-link" href="?page={{ i }}&page_size={{ page_size }}">{{ i }}</a></li>
+            {% endif %}
+        {% endfor %}
+
+        {% if patients.paginator.num_pages > patients.number|add:'4' %}
+            <li class="page-item">
+                <a class="page-link" href="#">&hellip;</a>
+            </li>
+        {% endif %}
+        
+        {% if patients.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ patients.next_page_number }}&page_size={{ page_size }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
